Added User Guide Route and removed vulnerable dependencies

--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -4,6 +4,7 @@
         <div class="ui form width-container">
             <p>
                 <b>Select from one of the Input Sources</b>
+                <a class="ui icon orange button guide" href="{{href-to 'user-guide'}}" data-tooltip="User Input Guide" data-position="right center"><i class="info icon"></i></a>
             </p>
             {{#ui-accordion class="styled fluid"}}
             <div class="title" onclick={{action "csvClicked"}}>
@@ -117,7 +118,7 @@
             {{/ui-accordion}}
         </div>
     </div>
-    <button {{action "submitForm"}} class="ui fluid button">Create Badges</button>
+    <button {{action "submitForm"}} class="ui fluid orange button">Create Badges</button>
     {{#if badgeGenerated}}
     <div class="ui floating positive message">
         <div class="header">
